[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/GUIFontTheme.tres" type="Theme" id=2]
[ext_resource path="res://Player/sfx/gunshot.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/bullet.png" type="Texture" id=4]
[ext_resource path="res://Player/life.png" type="Texture" id=5]
[ext_resource path="res://Player/Hurt.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/GUI/Hurt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 15.6876, 25.6736, 7.40567 ), Vector3( -8.34253, -18.4957, 2.77864 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "WaveStart"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/GUI/Rows/WaveLabel:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1, 1.2, 1.5, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.686275, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.686275, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/GUI/Rows/WaveLabel:custom_colors/font_color_shadow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1, 1.2, 1.5, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0.815686, 0.682353, 0.682353, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0.815686, 0.682353, 0.682353, 1 ) ]
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.44523, 1.05343, 0.440525 )

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 1 )
anims/WaveStart = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53751, 0.465008 )
current = true
fov = 52.4569

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.910843, 0 )
shape = SubResource( 3 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42608, 0 )
layers = 4
light_energy = 2.2
shadow_enabled = true
spot_range = 6.25088
spot_angle = 16.8724

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48234, 0 )
omni_range = 4.85312

[node name="Gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[node name="HurtSfx" type="AudioStreamPlayer" parent="."]
bus = "Sfx"

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Reloading" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hurt" type="TextureRect" parent="HUD/GUI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="HUD/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Label" parent="HUD/GUI/Rows"]
margin_top = 53.0
margin_right = 1004.0
margin_bottom = 73.0
size_flags_vertical = 6

[node name="WaveLabel" type="Label" parent="HUD/GUI/Rows"]
margin_top = 130.0
margin_right = 1004.0
margin_bottom = 150.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.686275, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.815686, 0.682353, 0.682353, 1 )
align = 1
valign = 1

[node name="Padding5" type="Label" parent="HUD/GUI/Rows"]
margin_top = 207.0
margin_right = 1004.0
margin_bottom = 227.0
size_flags_vertical = 6

[node name="ReloadingLabel" type="Label" parent="HUD/GUI/Rows"]
margin_top = 284.0
margin_right = 1004.0
margin_bottom = 304.0
theme = ExtResource( 2 )
align = 1

[node name="Padding4" type="Label" parent="HUD/GUI/Rows"]
margin_top = 361.0
margin_right = 1004.0
margin_bottom = 381.0
size_flags_vertical = 6

[node name="Bullets" type="HBoxContainer" parent="HUD/GUI/Rows"]
margin_top = 438.0
margin_right = 1004.0
margin_bottom = 470.0

[node name="Bullet" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet2" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet3" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet4" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet5" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet6" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet7" type="TextureRect" parent="HUD/GUI/Rows/Bullets"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Label" parent="HUD/GUI/Rows"]
margin_top = 474.0
margin_right = 1004.0
margin_bottom = 494.0

[node name="Hearts" type="HBoxContainer" parent="HUD/GUI/Rows"]
margin_top = 498.0
margin_right = 1004.0
margin_bottom = 530.0

[node name="Heart" type="TextureRect" parent="HUD/GUI/Rows/Hearts"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Heart2" type="TextureRect" parent="HUD/GUI/Rows/Hearts"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Heart3" type="TextureRect" parent="HUD/GUI/Rows/Hearts"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 5 )

[node name="Padding3" type="Label" parent="HUD/GUI/Rows"]
margin_top = 534.0
margin_right = 1004.0
margin_bottom = 554.0

[node name="ScoreLabel" type="Label" parent="HUD/GUI/Rows"]
margin_top = 558.0
margin_right = 1004.0
margin_bottom = 578.0
theme = ExtResource( 2 )
[connection signal="timeout" from="Reloading" to="." method="_on_Reloading_timeout"]
